<resources>
    <string name="app_name">Movie Observer</string>


    <string-array name="starting_content">
        <item>Upcoming</item>
        <item>Now playing</item>
    </string-array>

    <string-array name="language">
        <item>English</item>
        <item>German</item>
    </string-array>

    <!--  Bottom navigation  -->
    <string name="navigation_movies">Movies</string>
    <string name="navigation_settings">Settings</string>
    <string name="navigation_favorites">Favorites</string>

    <!--  Toolbar Titles  -->
    <string name="toolbar_browse_movies">Browse Movies</string>
    <string name="toolbar_favorites">Favorites</string>
    <string name="toolbar_settings">Settings</string>
    <string name="toolbar_Details">Details</string>

    <!--  Featured Screen  -->
    <string name="featured_no_internet">Internet connection is required for the first launch.</string>
    <string name="featured_content_upcoming">Upcoming</string>
    <string name="featured_content_now_playing">Now playing</string>

    <!--  Settings Screen  -->
    <string name="settings_general_settings">General settings</string>
    <string name="settings_enable_dark_mode">Enable dark mode</string>
    <string name="settings_starting_content">Starting content</string>
    <string name="settings_content_settings">Content settings</string>
    <string name="settings_include_dult_movies">Include adult movies</string>
    <string name="settings_language">Language</string>

    <!--  Detail Screen  -->
    <string name="detail_share_text">Check this out!</string>
    <string name="share_movie">Share movie</string>
    <string name="details_title">Title:</string>
    <string name="details_rating">Rating:</string>
    <string name="details_release_date">Release date:</string>
    <string name="details_language">Language:</string>
    <string name="details_description">Description:</string>

    <!--  Favorites Screen  -->
    <string name="favorites_empty_list">There is no favorite movie yet. Try to add a movie now by pressing the heart icon!</string>

    <!--  Other  -->
    <string name="snackbar_movie_removed">Movie removed from favorites</string>
    <string name="snackbar_movie_added">Movie added to favorites</string>
    <string name="snackbar_undo">Undo</string>

</resources>
