<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nowPlayingMoviesFragment"
        android:icon="@drawable/ic_movies"
        android:orderInCategory="1"
        android:title="@string/navigation_movies"
        app:showAsAction="always" />
    <item
        android:id="@+id/favoriteMoviesFragment"
        android:icon="@drawable/ic_favorite"
        android:orderInCategory="2"
        android:title="@string/navigation_favorites"
        app:showAsAction="always" />
    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_settings"
        android:orderInCategory="3"
        android:title="@string/navigation_settings"
        app:showAsAction="always" />
</menu>