<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nowPlayingMoviesFragment">

    <fragment
        android:id="@+id/nowPlayingMoviesFragment"
        android:name="com.kTs.movieobserver.ui.featuredMoviesScreen.FeaturedMoviesFragment"
        android:label="@string/toolbar_browse_movies"
        tools:layout="@layout/featured_movies_fragment">
        <action
            android:id="@+id/action_nowPlayingMoviesFragment_to_movieDetailFragment"
            app:destination="@id/movieDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.kTs.movieobserver.ui.settingsScreen.SettingsFragment"
        android:label="@string/toolbar_settings"
        tools:layout="@layout/settings_fragment" />
    <fragment
        android:id="@+id/favoriteMoviesFragment"
        android:name="com.kTs.movieobserver.ui.favoriteMoviesScreen.FavoriteMoviesFragment"
        android:label="@string/toolbar_favorites"
        tools:layout="@layout/favorite_movies_fragment">
        <action
            android:id="@+id/action_favoriteMoviesFragment_to_movieDetailFragment"
            app:destination="@id/movieDetailFragment" />
        <action
            android:id="@+id/action_favoriteMoviesFragment_to_nowPlayingMoviesFragment"
            app:destination="@id/nowPlayingMoviesFragment" />
    </fragment>
    <fragment
        android:id="@+id/movieDetailFragment"
        android:name="com.kTs.movieobserver.ui.movieDetailScreen.MovieDetailFragment"
        android:label="@string/toolbar_Details"
        tools:layout="@layout/movie_detail_fragment">
        <argument
            android:name="movie"
            app:argType="com.kTs.movieobserver.domain.Movie" />
    </fragment>

</navigation>