<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="movie"
            type="com.kTs.movieobserver.domain.Movie" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:paddingBottom="@dimen/container_card_margin">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/container_card_margin"
                android:layout_marginTop="@dimen/container_card_margin"
                android:layout_marginEnd="@dimen/container_card_margin"
                app:cardCornerRadius="@dimen/card_corner_radius"
                app:cardElevation="@dimen/card_elevation">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:context=".ui.movieDetailScreen.MovieDetailFragment">

                    <ImageView
                        android:id="@+id/movie_detail_image"
                        imageUrl="@{movie.posterPath}"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/details_image_height"
                        android:scaleType="center"
                        app:layout_constraintBottom_toTopOf="@id/movie_detail_text_container"
                        app:layout_constraintTop_toTopOf="parent" />

                    <LinearLayout
                        android:id="@+id/movie_detail_text_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintTop_toBottomOf="@+id/movie_detail_image">

                        <TextView
                            style="@style/Title.Details"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/details_title" />

                        <TextView
                            android:id="@+id/movie_detail_title"
                            style="@style/Detail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@{movie.title}" />

                        <TextView
                            style="@style/Title.Details"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/details_rating" />

                        <TextView
                            android:id="@+id/movie_detail_description"
                            style="@style/Detail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@{movie.voteAverage}" />

                        <TextView
                            style="@style/Title.Details"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/details_release_date" />

                        <TextView
                            android:id="@+id/movie_detail_rating"
                            style="@style/Detail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@{movie.releaseDate}" />

                        <TextView
                            style="@style/Title.Details"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/details_language" />

                        <TextView
                            android:id="@+id/movie_detail_language"
                            style="@style/Detail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@{movie.originalLanguage}" />

                        <TextView
                            style="@style/Title.Details"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/details_description" />

                        <TextView
                            android:id="@+id/movie_detail_release_date"
                            style="@style/Detail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@{movie.overview}" />
                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</layout>